<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.natashaford.todolist.HomePageActivity">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/home_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_new_button"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_button"
        app:layout_constraintHorizontal_bias="0.516"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/home_full_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_task_button"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_info"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/list_button"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:onClick="onClickFullList"
        android:background="@color/background"
        android:text="@string/button_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_full_list"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:onClick="onClickNew"
        android:background="@color/background"
        android:text="@string/button_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="10dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/home_info"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/home_info"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />
</android.support.constraint.ConstraintLayout>
