<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.natashaford.todolist.FullListActivity"
    android:onClick="getTask">

    <Button
        android:id="@+id/list_new_button"
        android:layout_width="68dp"
        android:layout_height="34dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onClickNewList"
        android:background="@color/background"
        android:text="@string/button_name"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/full_list_title" />

    <TextView
        android:id="@+id/list_new_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_new_button"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/list_new_button"
        app:layout_constraintTop_toBottomOf="@+id/full_list_title" />

    <TextView
        android:id="@+id/full_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/all_tasks"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/tasks_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/list_new_task"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
